; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_threads.c_mpthread_mutex_init_recursive.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_threads.c_mpthread_mutex_init_recursive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PTHREAD_MUTEX_RECURSIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpthread_mutex_init_recursive(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i32 @pthread_mutexattr_init(i32* %3)
  %6 = load i32, i32* @PTHREAD_MUTEX_RECURSIVE, align 4
  %7 = call i32 @pthread_mutexattr_settype(i32* %3, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @pthread_mutex_init(i32* %8, i32* %3)
  store i32 %9, i32* %4, align 4
  %10 = call i32 @pthread_mutexattr_destroy(i32* %3)
  %11 = load i32, i32* %4, align 4
  ret i32 %11
}

declare dso_local i32 @pthread_mutexattr_init(i32*) #1

declare dso_local i32 @pthread_mutexattr_settype(i32*, i32) #1

declare dso_local i32 @pthread_mutex_init(i32*, i32*) #1

declare dso_local i32 @pthread_mutexattr_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
